linera-views-derive/src/snapshots/linera_views_derive__tests__generate_clonable_view_code.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_clonable_view_code(input))
---
impl<C> linera_views::views::ClonableView for TestView<C>
where
    RegisterView<C, usize>: ClonableView,
    CollectionView<C, usize, RegisterView<C, usize>>: ClonableView,
    Self: linera_views::views::View + Sync,
{
    fn clone_unchecked(&mut self) -> Result<Self, linera_views::ViewError> {
        Ok(Self {
            register: self.register.clone_unchecked()?,
            collection: self.collection.clone_unchecked()?,
        })
    }
}
