linera-views-derive/src/snapshots/linera_views_derive__tests__generate_sharable_view_code.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_sharable_view_code(input))
---
impl<C> linera_views::views::SharableView<C> for TestView<C>
where
    C: linera_views::common::Context + Send + Sync + Clone + 'static,
    linera_views::views::ViewError: From<C::Error>,
{
    fn share_unchecked(&mut self) -> Result<Self, linera_views::views::ViewError> {
        Ok(Self {
            register: self.register.share_unchecked()?,
            collection: self.collection.share_unchecked()?,
        })
    }
}

